ingressroute.yaml

---


apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-vault-fiduciaedge-internal
  namespace: default
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host("vault.fiduciaedge.internal")
    kind: Rule
    services:
    - name: vault
      port: 8443
      scheme: https
      passHostHeader: true
      serversTransport: vault-server-transport
  tls:
    secretName: ingress-vault-fiduciaedge-internal
    domains:
    - main: fiduciaedge.internal
      sans:
      - vault.fiduciaedge.internal
    # mtls
    # options:
    #   name: traefik-client-auth
    #   namespace: $NAMESPACE_TLS_OPTION
